feat: novas funcionalidades + .gitignore